<resources>
    <string name="app_name">Music App</string>

    <string name="app_description">An Android Media Player</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="settings">Settings</string>
    <string name="equalizer">Equalizers</string>

    <string name="unknown_title">UNKNOWN TITLE</string>
    <string name="unknown_artist">UNKNOWN ARTIST</string>
    <string name="unknown_album">UNKNOWN ALBUM</string>
    <string name="unknown_playlist">UNKNOWN PLAYLIST</string>

    <string name="start_duration">0:00</string>

    <string name="add_to_playlist">Add to playlist</string>
    <string name="delete_from_playlist">Delete from playlist</string>
    <string name="delete_song">Delete song</string>

    <string name="delete_playlist">Delete playlist</string>

    <string name="choose_a_playlist">Choose a playlist</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>
</resources>
