<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_songs"
            android:icon="@drawable/ic_music_note_light"
            android:title="@string/songs" />
        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/ic_music_note_light"
            android:title="@string/artists" />
        <item
            android:id="@+id/nav_albums"
            android:icon="@drawable/ic_music_note_light"
            android:title="@string/albums" />

    </group>

    <group android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_music_note_light"
            android:title="@string/playlists" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/settings"
            android:visible="false"/>
        <item
            android:id="@+id/nav_equalizer"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/equalizer"
            android:visible="false"/>
    </group>

</menu>
