<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/item_song_album_art"
            android:layout_width="240dp"
            android:layout_height="240dp" />

        <SeekBar
            android:id="@+id/item_song_duration_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp">

            <TextView android:id="@+id/item_song_current_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_duration"/>

            <TextView android:id="@+id/item_song_total_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <TextView
            android:id="@+id/item_song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_title"
            android:paddingTop="5dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/item_song_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_artist"
            android:paddingTop="5dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="15dp">

        <Button android:id="@+id/item_song_rewind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:minHeight="40dp"
            android:minWidth="40dp"
            android:background="@drawable/ic_rewind_light" />

        <Button android:id="@+id/item_song_play_pause"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:minWidth="40dp"
            android:background="@drawable/ic_play_light"
            android:layout_toRightOf="@+id/item_song_rewind" />

        <Button android:id="@+id/item_song_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:minWidth="40dp"
            android:background="@drawable/ic_forward_light"
            android:layout_toRightOf="@+id/item_song_play_pause" />

    </RelativeLayout>

    </LinearLayout>

</LinearLayout>